# Client_server_app

./: .swp  CMakeLists.txt
client/: CMakeLists.txt  Chat.cpp  Chat.h  Graffiti_space.cpp  Graffiti_space.h  Massege.cpp  Massege.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
client/build-client-Desktop_Qt_6_4_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  (+2 more)
server/: CMakeLists.txt  Server.cpp  Server.h  User.h  databasecontroller.cpp  databasecontroller.h  databasecontroller.h.autosave  main.cpp
server/build-server-Desktop_Qt_6_4_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  server
server/build-server-Desktop_Qt_6_4_3_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-39b474bdf835c8691c5c.json  codemodel-v2-61801a883ffa4a3e904e.json  index-2023-04-14T08-18-11-0907.json  target-server_autogen_timestamp_deps-Debug-e2b0296728490cc71b6c.json
server/build-server-Desktop_Qt_6_4_3_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-b1758cd06a162ebbffc3.json  directory-.-Debug-efba053fef0bf2be2e29.json  target-server-Debug-65a8734eacf86f0c3c37.json  target-server_autogen-Debug-893e50b0beb2ceed2da0.json
server/build-server-Desktop_Qt_6_4_3_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
server/build-server-Desktop_Qt_6_4_3_GCC_64bit-Debug/server_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
server/build-server-Desktop_Qt_6_4_3_GCC_64bit-Debug/server_autogen/EWIEGA46WW/: moc_Server.cpp  moc_Server.cpp.d
server/data/: massenger_db.db
server/server/: CMakeLists.txt  Server.cpp  Server.h  User.cpp  User.h
(+22 files in other folders)
